--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,12 +1,12 @@
 html[data-theme='light'] {
   --color-default-background: #{$white};
-  --color-darkModeToggle-background: #{$white};
+  --color-themeToggle-background: #{$white};
   --color-default-text: #{$black};
   --color-gray-text: #{$gray800};
 }
 html[data-theme='dark'] {
   --color-default-background: #{$dark};
-  --color-darkModeToggle-background: #{$purple600};
+  --color-themeToggle-background: #{$purple600};
   --color-default-text: #{$white};
   --color-gray-text: #{$gray100};
 }
